--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
           <a class="nav-link" routerLink="/donor">Donor</a>
-          <a class="nav-link" routerLink="">Contact</a>
+          <a class="nav-link" routerLink="/contact">Contact</a>
           <a class="nav-link "routerLink="">Aboutus</a>
         </div>
       </div>
