--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
           <a class="nav-link" routerLink="/donor">Donor</a>
           <a class="nav-link" routerLink="/contact">Contact</a>
-          <a class="nav-link "routerLink="">Aboutus</a>
+          <a class="nav-link "routerLink="/aboutus">Aboutus</a>
         </div>
       </div>
     </div>
